--- a/style.css
+++ b/style.css
@@ -97,15 +97,14 @@ a:hover {
 .hero-image {
   position: relative;
   width: 100%;
-  height: 440px;
+  height: auto;
   overflow: hidden;
 }
 
 .hero-image>img:first-child {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center 40%;
+  height: auto;
+  object-fit: contain;
 }
 
 .hero-image::after {
@@ -532,7 +531,7 @@ a:hover {
   }
 
   .hero-image {
-    height: 300px;
+    height: auto;
   }
 
   .hero-overlay-design {
